--- a/app/styles/text.less
+++ b/app/styles/text.less
@@ -85,3 +85,32 @@
 		.-((@i - 1))
  	} .-;
 }
+
+
+@media only screen and (min-width : 1099px){ 
+	.scale-text-lg{ font-size:50px; }
+	.scale-text-md{ font-size:40px; }
+	.scale-text-sd{ font-size:15px; }
+	.scale-text-sm{ font-size:13px; }
+}
+
+@media only screen and (min-width : 960px){ 
+	.scale-text-lg{ font-size:45px; }
+	.scale-text-md{ font-size:35px; }
+	.scale-text-sd{ font-size:15px; }
+	.scale-text-sm{ font-size:12px; }
+}
+
+@media only screen and (min-width : 720px){ 
+	.scale-text-lg{ font-size:40px; }
+	.scale-text-md{ font-size:30px; }
+	.scale-text-sd{ font-size:14px; }
+	.scale-text-sm{ font-size:11px; }
+}
+
+@media only screen and (min-width : 0px){ 
+	.scale-text-lg{ font-size:35px; }
+	.scale-text-md{ font-size:25px; }
+	.scale-text-sd{ font-size:14px; }
+	.scale-text-sm{ font-size:10px; }
+}
