--- a/app/styles/text.less
+++ b/app/styles/text.less
@@ -7,6 +7,7 @@
 .text-medium{ font-weight:600; }
 .text-normal{ font-weight:400; }
 .text-light{ font-weight:100; }
+.text-underline{ text-decoration: underline; }
 
 .code-block{
 	background-color: lighten(@gray, 15%);
