--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,6 +1,7 @@
 @import '../../bower_components/font-awesome/less/font-awesome';
 @import '../../bower_components/bootstrap/less/bootstrap';
 @import 'colors';
+@import 'buttons';
 @import 'text';
 @four-sides: top, left, right, bottom;
 @border-styles: dashed, dotted, double, grooved, hidden, inset, outset, none, ridge, solid;
