some of lost animation file :/

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -11,12 +11,12 @@
 
 	
 
-	&.btn-cta{
+	&.btn-styled{
 		&:hover{ 
 			animation-duration:.2s;
 			animation-name: hoverScaleDown;
 			animation-iteration-count:1;
-			transform: scale(.9,.9);
+			transform: scale(.85,.85);
 		}
 		-webkit-box-shadow: 0px 8px 21px 3px rgba(50, 50, 50, 0.55);
 		-moz-box-shadow: 0px 8px 21px 3px rgba(50, 50, 50, 0.55);
