--- a/app/styles/animations.less
+++ b/app/styles/animations.less
@@ -32,6 +32,22 @@
   left:65px;
 }
 
+.hover-heart-beat:hover, .heart-beat{
+  animation: heartBeat .5s 1;
+  transform: scale(1,1);
+}
+
+.heart-beat{
+  animation-iteration-count: infinite;
+}
+
+@keyframes heartBeat {
+  0% { transform: scale(1,1); }
+  15% { transform: scale(1.1,1.1); }
+  80% { transform: scale(.9,.9); }
+  100% { transform: scale(1.05,1.05); }
+}
+
 @keyframes slideLeftFar {
   0% { left: 0px; }
   10% { left: -4px; }
