--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -67,8 +67,33 @@ body{
  	} .-;
 }
 
-.curved{ border-radius:10px; }
-.circle{ border-radius:2000px; min-width:33px; min-height:33px;}
+.curved{ border-radius:7px; }
+.circle{ 
+	border-radius:2000px; 
+	min-width:33px; 
+	min-height:33px;
+
+	&.circle-smallest{
+		min-width:50px; 
+		min-height:50px;
+	}
+	&.circle-small{
+		min-width:100px; 
+		min-height:100px;
+	}
+	&.circle-medium{
+		min-width:250px;
+		min-height:250px;
+	}
+	&.circle-large{
+		min-width:400px;
+		min-height:400px;
+	}
+	&.circle-giant{
+		min-width:700px;
+		min-height:700px;
+	}
+}
 
 
 .border-style-{
