--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -18,6 +18,10 @@ body{
 	min-height:50px;
 	float:left;
 
+	&.square-smallest{
+		min-width:50px;
+		min-height:50px;
+	}
 	&.square-small{
 		min-width:100px;
 		min-height:100px;
@@ -196,3 +200,7 @@ body{
 	transition: background-color 3s ease;
 }
 
+
+.hover-lose-grad-background{
+
+}
