applied sicne docs

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -11,13 +11,13 @@
 
 }
 
-.shadow-off{
+.shadow-off, .hower-shadow-off:hover{
 	-webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
 	-moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
 	box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
 }
 
-.shadow{
+.shadow, .hover-shadow:hover{
 	-webkit-box-shadow: 0px 8px 21px 3px rgba(50, 50, 50, 0.55);
 	-moz-box-shadow: 0px 8px 21px 3px rgba(50, 50, 50, 0.55);
 	box-shadow: 0px 8px 21px 3px rgba(50, 50, 50, 0.55);
