--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -14,8 +14,8 @@ body{
 
 .square{
 	border-radius: 0px;
-	min-width:50px;
-	min-height:50px;
+	min-width:75px;
+	min-height:75px;
 	float:left;
 
 	&.square-smallest{
@@ -72,6 +72,8 @@ body{
 }
 
 .curved{ border-radius:7px; }
+.curved-light{ border-radius:3px; }
+.curved-heavy{ border-radius:11px; }
 .circle{ 
 	border-radius:2000px; 
 	min-width:33px; 
